# infotecs-cpp-internship

./: CMakeLists.txt  possible_values.txt
client/: client.cpp  client.h  main.cpp
other/: utils.cpp  utils.h
server/: main.cpp  server.cpp  server.h
src/: client.cpp  server.cpp
tests/: client_tests.cpp  server_tests.cpp
